setup for docker

--- a/llm-product-assistance/pom.xml
+++ b/llm-product-assistance/pom.xml
@@ -113,6 +113,7 @@
     </dependencies>
 
     <build>
+        <finalName>llm-product-assistance</finalName>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
         <plugins>
