--- a/llm-product-assistance/src/main/resources/application.properties
+++ b/llm-product-assistance/src/main/resources/application.properties
@@ -6,7 +6,10 @@ quarkus.langchain4j.mistralai.chat-model.model-name=mistral-small-2501
 quarkus.langchain4j.mistralai.chat-model.temperature=0
 quarkus.langchain4j.mistralai."mistral-small-2501".chat-model.safe-prompt=true
 quarkus.http.port=8080
-quarkus.http.host=0.0.0.0
-quarkus.http.cors.enabled=false
+quarkus.http.host=127.0.0.1
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=http://localhost:5173
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=Content-Type,Authorization
 quarkus.package.jar.enabled=true
 quarkus.package.jar.type=uber-jar
