i18n + historize prompts for data quality tests

--- a/llm-product-assistance/src/main/resources/application.properties
+++ b/llm-product-assistance/src/main/resources/application.properties
@@ -1,10 +1,5 @@
 quarkus.http.proxy.proxy-forwarded-host=true
 quarkus.http.proxy.proxy-address-forwarding=true
-quarkus.langchain4j.mistralai.id=ag_019a77b263007444ab78f695468f2157
-quarkus.langchain4j.mistralai.api-key=Yg96w8EiOly6EMPqd4UwOx1spCpISPE8
-quarkus.langchain4j.mistralai.chat-model.model-name=mistral-small-2501
-quarkus.langchain4j.mistralai.chat-model.temperature=0
-quarkus.langchain4j.mistralai."mistral-small-2501".chat-model.safe-prompt=true
 quarkus.http.port=8080
 quarkus.http.host=127.0.0.1
 quarkus.http.cors.enabled=true
@@ -13,3 +8,24 @@ quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.headers=Content-Type,Authorization
 quarkus.package.jar.enabled=true
 quarkus.package.jar.type=uber-jar
+quarkus.rest-client.serialization-provider=kotlinx-serialization
+quarkus.rest-client.mistral-api.uri=https://api.mistral.ai/v1
+mistral.api.agent_id=ag_019a77b263007444ab78f695468f2157
+# Logging
+quarkus.log.level=INFO
+quarkus.log.category."com.example.mistral".level=DEBUG
+
+# HTTP client timeout settings
+quarkus.rest-client."mistral-api".connect-timeout=10000
+quarkus.rest-client."mistral-api".read-timeout=30000
+quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
+quarkus.log.category."org.jboss.resteasy.reactive.client.logging".min-level=DEBUG
+
+
+# datasource
+
+quarkus.datasource.jdbc.url=jdbc:postgresql:eshop?currentSchema=llm_metrics
+quarkus.datasource.username=postgres
+quarkus.datasource.password=
+quarkus.hibernate-orm.schema-management.strategy=validate
+quarkus.live-reload.enabled=false
