--- a/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/package.json
+++ b/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "solid-js": "^1.9.10"
+    "solid-js": "^1.9.10",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
