--- a/llm-product-assistance/src/main/resources/application.properties
+++ b/llm-product-assistance/src/main/resources/application.properties
@@ -9,8 +9,8 @@ quarkus.http.cors.headers=Content-Type,Authorization
 quarkus.package.jar.enabled=true
 quarkus.package.jar.type=uber-jar
 quarkus.rest-client.serialization-provider=kotlinx-serialization
-quarkus.rest-client.mistral-api.uri=https://api.mistral.ai/v1
 mistral.api.agent_id=ag_019a77b263007444ab78f695468f2157
+mistral.api.key=${MISTRAL_API_KEY}
 # Logging
 quarkus.log.level=INFO
 quarkus.log.category."com.example.mistral".level=DEBUG
