--- a/llm-product-assistance/src/main/resources/application.properties
+++ b/llm-product-assistance/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.http.proxy.proxy-address-forwarding=true
 quarkus.http.port=8080
 quarkus.http.host=127.0.0.1
 quarkus.http.cors.enabled=true
-quarkus.http.cors.origins=http://localhost:5173
+quarkus.http.cors.origins=http://localhost:5173,https://citel.fr
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.headers=Content-Type,Authorization
 quarkus.package.jar.enabled=true
@@ -29,3 +29,11 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=
 quarkus.hibernate-orm.schema-management.strategy=validate
 quarkus.live-reload.enabled=false
+
+
+# SolidJS dev server URL
+solidjs.dev.server=http://localhost:3000
+
+# Enable dev mode proxy
+%dev.solidjs.proxy.enabled=true
+%prod.solidjs.proxy.enabled=false
