llm interactions logged

--- a/llm-product-assistance/src/main/resources/application.properties
+++ b/llm-product-assistance/src/main/resources/application.properties
@@ -11,23 +11,26 @@ quarkus.package.jar.type=uber-jar
 quarkus.rest-client.serialization-provider=kotlinx-serialization
 mistral.api.agent_id=ag_019a77b263007444ab78f695468f2157
 mistral.api.key=${MISTRAL_API_KEY}
+mistral.api.url=h
 # Logging
 quarkus.log.level=INFO
 quarkus.log.category."com.example.mistral".level=DEBUG
 
 # HTTP client timeout settings
-quarkus.rest-client."mistral-api".connect-timeout=10000
-quarkus.rest-client."mistral-api".read-timeout=30000
+quarkus.rest-client."taack.universe.implementation.mistral.MistralAPIClient".connect-timeout=10000
+quarkus.rest-client."taack.universe.implementation.mistral.MistralAPIClient".read-timeout=30000
+quarkus.rest-client."taack.universe.implementation.mistral.MistralAPIClient".url=https://api.mistral.ai/v1
+
 quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 quarkus.log.category."org.jboss.resteasy.reactive.client.logging".min-level=DEBUG
 
 
 # datasource
 
-quarkus.datasource.jdbc.url=jdbc:postgresql:eshop?currentSchema=llm_metrics
+quarkus.datasource.jdbc.url=jdbc:postgresql:eshop?currentSchema=llm
 quarkus.datasource.username=postgres
 quarkus.datasource.password=
-quarkus.hibernate-orm.schema-management.strategy=validate
+quarkus.hibernate-orm.schema-management.strategy=update
 quarkus.live-reload.enabled=false
 
 
