--- a/llm-product-assistance/pom.xml
+++ b/llm-product-assistance/pom.xml
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-client-reactive</artifactId>
+            <version>3.15.7</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
