--- a/llm-product-assistance/src/main/resources/application.properties
+++ b/llm-product-assistance/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.http.cors.headers=Content-Type,Authorization
 quarkus.package.jar.enabled=true
 quarkus.package.jar.type=uber-jar
 quarkus.rest-client.serialization-provider=kotlinx-serialization
-mistral.api.agent_id=ag_019a77b263007444ab78f695468f2157
+mistral.api.agent_id=${MISTRAL_AGENT_ID}
 mistral.api.key=${MISTRAL_API_KEY}
 mistral.api.url=h
 # Logging
